# Alpaca-AI-Paper-trader

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  tmp_test_get_price.py
.github/workflows/: lint.yml  run-agent.yml
agno_trader/: README.md  __init__.py  agents.py  main.py
agno_trader/tools/: __init__.py  alpaca_tool.py  market_data.py
tmp/: stock_price_cache.json
