[project]
name = "ptrade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"agno>=0.1.0",
	"alpaca-trade-api",
	"pandas",
	"python-dotenv",
	"google-genai>=1.33.0",
	"google-generativeai>=0.8.5",
	"requests>=2.32.5",
	"urllib3>=2.5.0",
    "yfinance",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pre-commit",
]

[tool.setuptools]
packages = ["agno_trader"]


[project.scripts]
run = "agno_trader.main:main"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
